--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
