--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Image
         run: ./gradlew bootBuildImage --publishImage
         env:
